--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # Threshold after which files are written to disk.
-spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.file-size-threshold=2000KB
 # Max file size.
-spring.servlet.multipart.max-file-size=200MB
-server.max-http-request-header-size=20MB
+spring.servlet.multipart.max-file-size=200000000MB
+server.max-http-request-header-size=20000000000MB
 # Max Request Size
-spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.max-request-size=2000000000MB
