--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,9 @@ spring.thymeleaf.suffix=.html
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2000KB
 # Max file size.
-spring.servlet.multipart.max-file-size=200000000MB
+spring.servlet.multipart.max-file-size=200000000GB
 server.max-http-request-header-size=20000000000MB
 # Max Request Size
-spring.servlet.multipart.max-request-size=2000000000MB
+spring.servlet.multipart.max-request-size=2000000000GB
+spring.servlet.multipart.enabled=true
+spring.datasource.hikari.data-source-properties.max-allowed-packet=1000000000000000GB
