--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=DAT-communityHub
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community_hub
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=Zarniaung 12
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
