--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.thymeleaf.check-template=true
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
+upload.interval=10800000
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2000KB
 # Max file size.
